it looks passable now

--- a/quizmaker/quiz.css
+++ b/quizmaker/quiz.css
@@ -9,3 +9,21 @@ html, body {
 #quiz-data-box {
   resize: vertical;
 }
+
+.information {
+  text-align: center;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+button {
+  outline: none;
+  border: none;
+  padding: 12px;
+  border-radius: 3px;
+
+  background-color: lightgray;
+}
+
+button:hover {
+  background-color: darkgray;
+}
