--- a/quizmaker/css/editor-v1.css
+++ b/quizmaker/css/editor-v1.css
@@ -144,6 +144,7 @@ editor-content-after-icon {
 #question-selector-container {
   flex: 1;
   padding-top: 10rem;
+  overflow: scroll;
 }
 
 .question-navigation-button, #new-question-button {
@@ -167,11 +168,14 @@ editor-content-after-icon {
 }
 
 .question-navigation-button.question-navigation-button--selected {
-  border: 4px solid var(--bg-tertiary) !important;
+  /* border: 4px solid var(--bg-tertiary) !important; */
+  text-decoration: underline;
+  font-weight: bold !important;
 }
 
 #new-question-container {
   margin-top: 1rem;
+  margin-bottom: 15rem;
 }
 
 #quiz-editor-container {
@@ -193,7 +197,7 @@ editor-content-after-icon {
 
 .quiz-setting-action-button {
   display: inline-block !important;
-  margin-right: 0.5rem;
+  /* margin-right: 0.5rem; */
 }
 
 .help-information {
