--- a/quizmaker/css/quiz-v2.css
+++ b/quizmaker/css/quiz-v2.css
@@ -81,6 +81,10 @@
   font-size: 1.15rem;
 }
 
+#quiz-question-prompt {
+  font-weight: normal;
+}
+
 .quiz-radio-container {
   padding: 10px;
   margin-bottom: 10px;
