--- a/css/global-v1.css
+++ b/css/global-v1.css
@@ -26,3 +26,24 @@ body {
 
   background-color: var(--bg-primary);
 }
+
+/* Make uniform buttons across the site */
+.button {
+  display: inline-block;
+  padding: 0.75em;
+  font-size: small;
+
+  background-color: transparent;
+  border: 1px solid white;
+
+  text-decoration: none;
+  color: var(--text-primary);
+  cursor: pointer;
+
+  transition: background-color 0.2s, color 0.2s;
+}
+
+.button:hover {
+  background-color: white;
+  color: var(--text-inverted);
+}
