--- a/css/global-v3.css
+++ b/css/global-v3.css
@@ -58,3 +58,25 @@ h1,h2,h3,h4,h5,h6,p,span,div,a,select,button {
   border: 1px solid var(--text-primary);
   padding: 10px;
 }
+
+/* Make uniform text inputs */
+.input[type="text"] {
+  display: inline-block;
+  padding: 0.75em;
+  font-size: small;
+
+  background-color: transparent;
+  border: 1px solid white;
+  outline: none;
+
+  text-decoration: none;
+  color: var(--text-primary);
+
+  transition: background-color 0.2s, color 0.2s;
+}
+.input[type="text"]:hover {
+  background-color: var(--bg-primsec);
+}
+.input[type="text"]:focus {
+  background-color: var(--bg-primsec);
+}
